--- a/sobel/makefile
+++ b/sobel/makefile
@@ -1,5 +1,5 @@
 sobel: main.o sobel.o checker
-	gcc -fsanitize=address -lm main.o sobel.o -o sobel
+	gcc -Wall -Wextra -Wcast-align -fstack-protector -fsanitize=address -lm main.o sobel.o -o sobel
 	
 main.o: main.c
 	gcc -c main.c -o main.o
